--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,19 @@
-# Database
+# Database Configuration
 DATABASE_URL=postgresql://studentadmin:studentpass123@localhost:5432/student_tracker
+DB_POOL_SIZE=5
+DB_MAX_OVERFLOW=10
+DB_POOL_RECYCLE=3600
 
 # JWT Security
-SECRET_KEY=your-secret-key-here-change-in-production-min-32-chars
+SECRET_KEY=your-secret-key-here-change-in-production-must-be-at-least-32-characters-long
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
-# CORS
-CORS_ORIGINS=http://localhost:5173
-
 # Application
+APP_NAME=Student Academic Tracker
+DEBUG=false
 ENVIRONMENT=development
+
+# CORS - Comma-separated list
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
