--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
     "axios": "^1.6.2",
+    "chart.js": "^4.5.1",
     "clsx": "^2.0.0",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.1",
